--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -10454,6 +10454,7 @@ pre .code {
     flex-direction: column;
     /* justify-content: space-around; */
     align-items: center;
+    margin: 30px auto;
   }
   
   .logo-footer-container {
