--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1178,8 +1178,8 @@ pre code {
   color: #545454;
   background-color: rgba(84, 84, 84, 0.01);
   background-clip: padding-box;
-  border: 1px solid #545454;
-  border-radius: 0.25rem;
+  border: 1px solid #AAAAAA;
+  /* border-radius: 0.25rem; */
   -webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -1500,7 +1500,7 @@ textarea.form-control {
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
-  border-radius: 0.1rem;
+  /* border-radius: 0.1rem; */
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -1515,13 +1515,13 @@ textarea.form-control {
 
 .btn-outline-primary {
   color: #545454;
-  border-color: #545454;
+  border-color: #AAAAAA;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #333333;
-  border-color: #333333;
+  background-color: #545454;
+  /* border-color: #333333; */
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -3586,7 +3586,7 @@ input[type="button"].btn-block {
   margin-bottom: 0;
   /* background-color: rgba(84, 84, 84, 0.03); */
   background-color: #999999;
-  border-bottom: 1px solid rgba(84, 84, 84, 1);
+  border-bottom: 1px solid #999999;
 }
 
 .card-header:first-child {
@@ -9584,9 +9584,9 @@ p {
 .service-card {
   position: relative;
   min-height: 230px;
-  border: 1px solid #dee2e6;
+  border: 1px solid #AAAAAA;
   overflow: hidden;
-  border-radius: 3px;
+  /* border-radius: 3px; */
 }
 
 .service-card .body {
@@ -9835,7 +9835,7 @@ p {
 
 .testimonial-card-body {
   text-align: left;
-  border: 1px solid #dee2e6;
+  border: 1px solid #AAAAAA;
   background: #fff;
   padding: 20px 20px 20px 60px;
   border-radius: 0;
@@ -10586,7 +10586,7 @@ pre .code {
   background-image: url(../imgs/header.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center right;
+  background-position: 90%;
 }
 
 .header .overlay {
@@ -10808,6 +10808,7 @@ pre .code {
   background-image: url(../imgs/metrosp.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 .mecontrate {
