--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -10656,9 +10656,14 @@ pre .code {
 
 
 .header .header-content .header-subtitle {
-  font-size: calc(10px + (22 - 10) * ((100vw - 300px) / (1300 - 300)));
-  letter-spacing: calc(1px + (7 - 1) * ((100vw - 300px) / (1300 - 300)));
+  font-size: 20px;
+  /* font-size: calc(18px + (28 - 20) * ((100vw - 150px) / (1300 - 150))); */
+  /* font-size: calc(10px + (22 - 10) * ((100vw - 300px) / (1300 - 300))); */
+  /* letter-spacing: calc(1px + (7 - 1) * ((100vw - 300px) / (1300 - 300))); */
+  /* letter-spacing: calc(1px + (7 - 1) * ((100vw - 300px) / (1300 - 300))); */
+  letter-spacing: 1.5px;
   opacity: 0.9;
+
   margin-top: -10px;
   margin-bottom: 20px;
   /* text-shadow: 0 1px 1px rgba(255, 255, 255, 1); */
