--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -10964,7 +10964,7 @@ a.text-danger:hover, a.text-danger:focus {
           transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
-  background: rgba(140, 140, 140, 0.5);
+  background: rgba(255, 255, 255, 0.9);
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -10994,7 +10994,7 @@ a.text-danger:hover, a.text-danger:focus {
 .portfolio .portfolio-container .portfolio-item .content-holder .subtitle {
   font-weight: 500;
   opacity: 1;
-  color: #fff;
+  color: #545454;
 }
 
 .portfolio .portfolio-container .portfolio-item:hover .content-holder {
